--- a/src/dashboardpage/dashboard.css
+++ b/src/dashboardpage/dashboard.css
@@ -7,6 +7,7 @@
 .dashmain{
     display: flex;
     justify-content: space-between;
+    margin-bottom: 8px;
 }
 
 .sortmain{
@@ -41,7 +42,6 @@
 .table{
     margin-left: 120px;
     margin-right: 120px;
-    margin-top: 10px;
 }
 
 .head{
@@ -67,6 +67,8 @@
 .colums{
     border-style: solid;
     border-width: 1px;
+    height: 62vh;
+    overflow-y: scroll;
 }
 
 .body{
@@ -95,6 +97,10 @@
     width: 50px;
     height: 25px;
     margin: 10px;
+}
+
+.select:hover{
+    cursor: pointer;
 }
 
 .items{
